# Storybin

./: .gitignore  AGENT.md
.github/workflows/: ci.yml  pages.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  backup_sources.py  config.py  converter.py  crawler.py  epub.py  index_store.py  main.py  rendering.py  search.py  seed_remote.py  storage.py  uploads.py
backend/tests/: test_api.py  test_backup_sources.py  test_converter.py  test_crawler.py  test_epub.py  test_frontend.py  test_index_store.py  test_search.py  test_seed_remote.py  test_storage.py  test_uploads.py
backend/tests/fixtures/: banx_chapter_page.html  banx_jina_chapter_page.md  banx_jina_novel_page.md  banx_jina_search_page.md  banx_novel_page.html  banx_search_page.html  booklist_page1.html  chapter_page.html  novel_page.html  search_results_page.html
frontend/: index.html  storybin-import.user.js
skills/: SKILL.md
