[project]
name = "banxia-backend"
version = "0.1.0"
description = "FastAPI backend for crawling and downloading Banxia novels."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.110.0",
    "lxml>=5.1.0",
    "opencc-python-reimplemented>=0.1.7",
    "psycopg[binary]>=3.2.0",
    "rapidfuzz>=3.6.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.29.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
